<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="almazi.gitex.ShowGithubDetails.UserDetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/userFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            app:layout_constraintTop_toBottomOf="@id/userImageView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/companyNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            app:layout_constraintTop_toBottomOf="@+id/userFullName"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/userFullName"
            app:layout_constraintLeft_toRightOf="@+id/companyNameTextView"
            tools:text="Adam Smith"
            android:padding="8dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/loginNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_name"
            app:layout_constraintTop_toBottomOf="@+id/companyNameTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/companyName"
            app:layout_constraintLeft_toRightOf="@+id/loginNameTextView"
            tools:text="Adam Smith"
            android:padding="8dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/loginNameTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/loginName"
            app:layout_constraintLeft_toRightOf="@+id/emailTextView"
            tools:text="Adventure"
            android:padding="8dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/blogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blog"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/blogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/emailText"
            app:layout_constraintLeft_toRightOf="@+id/blogTextView"
            tools:text="Adventure"
            android:padding="8dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/followerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follower"
            app:layout_constraintTop_toBottomOf="@+id/blogTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/followerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/blogText"
            app:layout_constraintLeft_toRightOf="@+id/followerTextView"
            tools:text="Adventure"
            android:padding="8dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/reposTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repos"
            app:layout_constraintTop_toBottomOf="@+id/followerTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reposText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/followerText"
            app:layout_constraintLeft_toRightOf="@+id/reposTextView"
            tools:text="Adventure"
            android:padding="8dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/bioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            app:layout_constraintTop_toBottomOf="@+id/reposTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/reposText"
            app:layout_constraintLeft_toRightOf="@+id/bioTextView"
            tools:text="Adventure"
            android:padding="8dp"
            android:textSize="16sp"/>

    </android.support.constraint.ConstraintLayout>


</ScrollView>

